<resources>
    <string name="app_name">fitlandia</string>
    <string name="rutinas">rutinas</string>
    <string name="title_activity_running">activity_running</string>


    <string name="running_permission_rationale">Please grant location permission to start the service</string>
    <string name="running_permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <string name="running_title_alert_no_intenet">No internet</string>
    <string name="running_msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="running_no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="running_msg_location_service_not_started">Location Tracking Not Started</string>
    <string name="running_msg_location_service_started">Location Tracking Started</string>
    <string name="running_btn_label_refresh">Refresh</string>
    <string name="running_settings">settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle">Fitlandia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_running_map">Map</string>
    <string name="historial">Historial</string>
    <string name="galeria">Galeria</string>
    <string name="running">Running</string>
    <string name="peso">Peso</string>
    <string name="edad">Edad</string>

    <string name="cintura">Cintura</string>

    <string name="cuello">Cuello</string>
    <string name="kg">en kg</string>
    <string name="cadera">Cadera</string>
    <string name="cm">en cms</string>
    <string name="nombreUsuario">Nombre</string>
    <string name="altura">Altura</string>
    <string name="actualizar">Actualizar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ver_logro">verLogroActivity</string>
</resources>
