<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainhistorico"
    tools:context=".Main_historial">


    <TextView
        android:id="@+id/Historial"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/historial"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b_hist_rutinas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_hist_rutinas"
        android:layout_width="134dp"
        android:layout_height="91dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/icons8pesa64"
        android:onClick="goToHistoricoRutinas"
        android:text="@string/rutinas"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/b_hist_running"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_hist_running"
        android:layout_width="140dp"
        android:layout_height="89dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/icons8running64"
        android:onClick="goToHistoricoRunning"

        android:text="@string/running"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/b_hist_peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b_hist_peso"
        android:layout_width="137dp"
        android:layout_height="88dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"

        android:drawableTop="@drawable/icons8balanza64"
        android:onClick="goToHistoricoPeso"
        android:text="@string/peso"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/b_hist_fotos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/b_hist_fotos"
        android:layout_width="129dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/icons8camaralr64"
        android:onClick="goToHistoricoFotos"
        android:text="@string/galeria"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>